--- a/styles.css
+++ b/styles.css
@@ -53,23 +53,22 @@ li{
 header{
     display: flex;
     flex-direction: row;
-   
     align-items: baseline;
     justify-content: space-between;
 }
-.menu{
+.menu_main{
     display: flex;
     flex-direction: row;
     padding:50px 0;
     position: relative;
 }
-.menu-icon::after{
+.menu-icons::after{
     content: "\25be";
     width:10px;
     height:5px;
     margin-left: 10px;
 }
-.menu li{
+.menu_main li{
     margin-right: 30px;
 }
 .btn{
@@ -255,6 +254,8 @@ aside li:before{
 .pricing_cards{
     display:flex;
     flex-direction: row;
+    justify-content:center;
+    align-items: center;
 }
 .pricing_title{
     font-weight: 300;
@@ -332,6 +333,8 @@ aside li:before{
     text-transform: uppercase;
     margin-top:10px;
     background: #F7F7F7;
+    margin-left: 20px;
+    
 }
 .big{
     color: #FFFFFF;
@@ -339,6 +342,7 @@ aside li:before{
 }
 .center{
     display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
 }
@@ -366,6 +370,7 @@ color: #FFFFFF;
 .how_to_pay{
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
     align-items:center;
 }
@@ -453,3 +458,387 @@ grid-row-gap: 0px;
 .footer_four{grid-area: 1 / 3 / 3 / 4;}
 .footer_five{grid-area: 1 / 4 / 3 / 5;}
 .footer_six{grid-area: 3 / 4 / 4 / 5; }
+
+  
+  .hamburger,
+  .menu {
+    background: #FFFFFF; }
+  
+  .menu-item {
+    margin: 2rem 4rem;
+    font-size: 1.8rem;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center; }
+  
+  .hamburger {
+    position: absolute; 
+    top: 6em;
+    left: 6rem;
+    border: none;
+    cursor: pointer;
+    display: none; 
+    width: 24px;
+    height: 24px;
+}
+  
+  .menu-icon,
+  .close-icon {
+    color: #252525;
+     }
+  
+  .close-icon {
+    display: none; }
+  
+  .menu {
+    position: fixed;
+    transform: translateY(-100%);
+    transition: transform 0.2s;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    text-decoration: none;
+    list-style: none;
+    color: white;
+    height: 500px; }
+  
+  .menu-container {
+    padding-top: 6em; }
+  
+  .showMenu {
+    transform: translateY(0); }
+  
+@media (min-width: 320px) and (max-width: 575px){
+        .container{
+            margin: 0 10px;
+        }
+        .hamburger{
+            display:block;
+            left: 1rem;
+        }
+        .menu_main {
+            display: none; }
+        .login{
+            display: none; 
+        }
+        .logo{
+            margin-left: 50px;
+        }
+        .getstart{
+            margin-top: 30px;
+            margin-bottom:30px;
+        }
+        .tags {
+            display: none;
+        }
+        .vl {
+            display: none;
+        }
+        .post{
+            display: flex;
+            flex-direction: column;
+        }
+        .main,
+        .main_section{
+            display:flex;
+            flex-direction: column;
+            justify-content:center;
+            align-items:center;
+        }
+        aside{
+            margin-left: 50px;
+            margin-right:50px
+        }
+        .search input{
+            width: 100%;
+        }
+        .pricing_cards{
+            display:flex;
+            flex-direction: column;
+            justify-content:center;
+            align-items: center;
+        }
+        .pricing_cards div{
+            margin-bottom: 20px;
+        }
+        .pricing{
+            padding: 0 50px;
+        }
+        .ways img,
+        .ways p{
+        margin-right: 20px;
+    }
+    .pricing_card,
+    .pricing_card_big{
+        width: 100%;
+    }
+    .ways_title{
+        width: 100%;
+        display: flex;
+    justify-content: center}
+        .footer_logo{
+            margin-left: 100px;
+        }
+        footer{
+            display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(4, 2fr);
+        grid-column-gap: 0px;
+        grid-row-gap:0px;
+        }
+        .footer_first{ grid-area: 1 / 1 / 3 / 2; }
+        .footer_second{grid-area: 1 / 2 / 2 / 3;}
+        .footer_third{grid-area: 2 / 2 / 3 / 3;}
+        .footer_four{grid-area: 3 / 1 / 4 / 2;}
+        .footer_five{grid-area: 4 / 1 / 5 / 3;}
+        .footer_six{ grid-area: 3 / 2 / 4 / 3; }
+        
+        }
+        .footer_title{
+            margin-bottom: 10px;
+       
+    }
+@media (min-width: 576px) and (max-width: 768px){
+    .container{
+        margin: 0 100px;
+    }
+    .hamburger{
+        display:block;
+    }
+    .menu_main {
+        display: none; }
+    .login{
+        display: none; 
+    }
+    .logo{
+        margin-left: 50px;
+    }
+    .getstart{
+        margin-top: 30px;
+        margin-bottom:30px;
+    }
+    .tags {
+        display: none;
+    }
+    .vl {
+        display: none;
+    }
+    .post{
+        display: flex;
+        flex-direction: column;
+    }
+    .main,
+    .main_section{
+        display:flex;
+        flex-direction: column;
+        justify-content:center;
+        align-items:center;
+    }
+    aside{
+        margin-left: 70px;
+        margin-right:70px
+    }
+    .pricing_cards{
+        display:flex;
+        flex-direction: column;
+        justify-content:center;
+        align-items: center;
+    }
+    .pricing_cards div{
+        margin-bottom: 20px;
+    }
+    .ways img,
+    .ways p{
+    margin-right: 20px;
+}
+.ways_title{
+    width: 100%;
+    display: flex;
+justify-content: center;
+}
+.footer_logo{
+    margin-left: 100px;
+}
+.search input{
+    width: 100%;
+}
+footer{
+    display: grid;
+grid-template-columns: repeat(2, 1fr);
+grid-template-rows: repeat(4, 2fr);
+grid-column-gap: 0px;
+grid-row-gap:0px;
+}
+.footer_first{ grid-area: 1 / 1 / 3 / 2; }
+.footer_second{grid-area: 1 / 2 / 2 / 3;}
+.footer_third{grid-area: 2 / 2 / 3 / 3;}
+.footer_four{grid-area: 3 / 1 / 4 / 2;}
+.footer_five{grid-area: 4 / 1 / 5 / 3;}
+.footer_six{ grid-area: 3 / 2 / 4 / 3; }
+
+}
+.footer_title{
+    margin-bottom: 10px;
+}
+@media (min-width: 769px) and (max-width: 1075px){
+    .container{
+        margin: 0 150px;
+    }
+    .login{
+        display: none; 
+    }
+    .menu_main li{
+        margin-right: 10px;
+    }
+    .hamburger{
+        display:block;
+        left: 9rem;
+    }
+    .menu_main {
+        display: none; }
+    .login{
+        display: none; 
+    }
+    .logo{
+        margin-left: 50px;
+    }
+    .getstart{
+        margin-top: 30px;
+        margin-bottom:30px;
+    }
+    .menu-icons::after{
+        margin-left: 5px;
+    }
+    .tags,
+    .vl {
+    display: none;
+}
+.main,
+.main_section{
+    display:flex;
+    flex-direction: column;
+    justify-content:center;
+    align-items:center;
+    margin-left: 150px;
+    margin-right:150px
+}
+aside{
+    margin-left: 0;
+}
+.private{
+    margin: 20px 100px;
+}
+.ann_title_img{
+    margin: 20px 100px;
+}
+.post{
+    display: flex;
+    flex-direction: column;
+}
+.search input{
+    width: 100%;
+}
+.pricing_cards div{
+    margin-right: 10px;
+}
+.footer_logo{
+    margin-left: 100px;
+}
+footer{
+    display: grid;
+grid-template-columns: repeat(2, 1fr);
+grid-template-rows: repeat(4, 2fr);
+grid-column-gap: 0px;
+grid-row-gap:0px;
+}
+.footer_first{ grid-area: 1 / 1 / 3 / 2; }
+.footer_second{grid-area: 1 / 2 / 2 / 3;}
+.footer_third{grid-area: 2 / 2 / 3 / 3;}
+.footer_four{grid-area: 3 / 1 / 4 / 2;}
+.footer_five{grid-area: 4 / 1 / 5 / 3;}
+.footer_six{ grid-area: 3 / 2 / 4 / 3; }
+
+}
+.footer_title{
+    margin-bottom: 10px;
+
+}
+@media (min-width: 1076px) and (max-width: 1200px){
+    .container{
+        margin: 0 150px;
+    }
+    .login{
+        display: none; 
+    }
+    .menu_main li{
+        margin-right: 10px;
+    }
+    .menu_main,
+    .logo{
+        font-size: 14px;
+        line-height: 20px;
+
+    }
+    .menu-icons::after{
+        margin-left: 5px;
+    }
+    .tags,
+    .vl {
+    display: none;
+}
+.main,
+.main_section{
+    display:flex;
+    flex-direction: column;
+    justify-content:center;
+    align-items:center;
+    margin-left: 150px;
+    margin-right:150px
+}
+aside{
+    margin-left: 0;
+}
+.private{
+    margin: 20px 100px;
+}
+.ann_title_img{
+    margin: 20px 100px;
+}
+.post{
+    display: flex;
+    flex-direction: column;
+}
+.search input{
+    width: 100%;
+}
+}
+@media (min-width: 1201px) and (max-width: 1420px){
+    .container{
+        margin: 0 100px;
+    }
+    .main_img{
+        width:50%;
+        
+    }
+    .tags li:nth-child(8){
+        margin-right: 30px;
+    }
+    .tags{
+        font-size: 12px;
+        line-height: 15px;
+    }
+    .vl{
+        top: 157%;
+    }
+}
+@media (min-width: 1421px) and (max-width: 1550px){
+    .tags li:nth-child(8){
+        margin-right: 90px;
+    }
+    .vl{
+        top: 157%;
+    }
+}
+
