--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,13 @@ li {
   background-color: #22252e;
   display: flex;
   justify-content: center;
+  align-items: center;
+}
+.learn {
+  border: none;
+  background-color: #22252e;
+  color: #ffffff;
+  cursor: pointer;
 }
 .warning {
   display: flex;
@@ -24,17 +31,19 @@ li {
   font-size: 12px;
   line-height: 16px;
   position: relative;
+  justify-content: baseline;
 }
 .warning_first::before {
   content: url(./img/icon/red/warning.png);
   width: 10px;
   height: 10px;
   position: absolute;
+  top: 9px;
   left: -20px;
 }
 .close {
   position: absolute;
-  top: 10px;
+  top: 8px;
   right: 20px;
 }
 .warning li {
@@ -76,6 +85,7 @@ header {
   width: 10px;
   height: 5px;
   margin-left: 10px;
+  cursor: pointer;
 }
 .menu_main li {
   margin-right: 30px;
@@ -152,7 +162,7 @@ header {
   margin: 30px 0;
   background: #f7f7f7;
   border-radius: 4px;
-  padding: 33px 21px;
+  /* padding: 33px 21px; */
 }
 .tags li {
   margin-right: 30px;
@@ -161,11 +171,19 @@ header {
 .tags_left {
   display: flex;
   flex-direction: row;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 18px;
+  letter-spacing: 0.8px;
 }
 .tags_right {
   display: flex;
   flex-direction: row;
   margin-left: 20%;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 18px;
+  letter-spacing: 1px;
 }
 .tags .tags_left li:first-child {
   margin-left: 20px;
@@ -179,6 +197,9 @@ header {
   line-height: 18px;
   letter-spacing: 1px;
 }
+.pointer {
+  color: #ffffff;
+}
 .main_section {
   display: flex;
   flex-direction: row;
@@ -191,7 +212,7 @@ main {
   width: 100%;
 }
 aside {
-  width: 100%;
+  width: 50%;
 }
 
 .search {
@@ -221,7 +242,7 @@ aside {
   font-size: 32px;
   line-height: 44px;
   margin-bottom: 40px;
-  margin-top: 40px;
+  margin-top: 30px;
 }
 
 .post {
@@ -229,6 +250,7 @@ aside {
   flex-direction: row;
   margin-top: 30px;
   margin-right: 20px;
+  border-bottom: 1px solid #ebeced;
 }
 .post_content {
   margin: 0 0 0 40px;
@@ -244,19 +266,20 @@ aside {
 }
 .post_hr {
   margin-right: 40px;
+  background: #ebeced;
 }
 .btn-post {
   width: 260px;
   border: 1px solid #4cb649;
   background-color: #ffffff;
   color: #4cb649;
-  margin-top: 40px;
+  margin-top: 130px;
+  margin-bottom: -60px;
 }
 .old {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 118px;
 }
 aside {
   margin-left: 50px;
@@ -280,6 +303,7 @@ aside li:before {
 .pricing {
   padding: 0 200px;
   background: linear-gradient(135deg, #3d4251 0%, #272b35 100%);
+  margin-top: 130px;
 }
 .pricing_cards {
   display: flex;
@@ -294,7 +318,7 @@ aside li:before {
   text-align: center;
   letter-spacing: -0.5px;
   color: #ffffff;
-  padding: 100px 0 60px 0;
+  padding: 110px 0 30px 0px;
 }
 .pricing_card {
   width: 380px;
@@ -334,6 +358,7 @@ aside li:before {
   font-size: 24px;
   line-height: 32px;
   color: #22252e;
+  margin-top: -20px;
 }
 .pricing_card_cost {
   font-weight: 300;
@@ -459,6 +484,7 @@ aside li:before {
 }
 .footer_title {
   font-weight: 500;
+  font-style: normal;
   font-size: 14px;
   line-height: 18px;
   letter-spacing: 1px;
@@ -468,6 +494,7 @@ aside li:before {
 }
 .footer_item {
   font-weight: 400;
+  font-style: normal;
   font-size: 14px;
   line-height: 22px;
   color: #889099;
@@ -676,6 +703,12 @@ ul.cloud a:hover::before {
   .menu_main {
     display: none;
   }
+  .how_to_pay a {
+    margin-bottom: 40px;
+  }
+  .how_to_pay a:last-child {
+    margin-top: 0px;
+  }
   .login {
     display: none;
   }
@@ -684,7 +717,7 @@ ul.cloud a:hover::before {
     padding: 0;
   }
   .close {
-    top: 20px;
+    top: 22px;
     right: 5px;
   }
   .warning li {
@@ -719,6 +752,9 @@ ul.cloud a:hover::before {
     margin: 30px;
   }
   .main_text {
+    font-weight: 300;
+    font-size: 24px;
+    line-height: 34px;
     margin-bottom: 12px;
   }
   .logo {
@@ -748,6 +784,7 @@ ul.cloud a:hover::before {
   aside {
     margin-left: 50px;
     margin-right: 50px;
+    width: 100%;
   }
   .pricing_cards {
     display: flex;
@@ -759,6 +796,10 @@ ul.cloud a:hover::before {
   .pricing_cards div {
     margin-bottom: 20px;
   }
+  .pricing_card:last-child {
+    height: 380px;
+  }
+
   .pricing {
     padding: 0 30px;
   }
@@ -780,7 +821,7 @@ ul.cloud a:hover::before {
   }
   footer {
     display: grid;
-    grid-template-columns: repeat(2, 200px);
+    grid-template-columns: repeat(2, 175px);
     grid-template-rows: repeat(4, 200px);
     grid-column-gap: 0px;
     grid-row-gap: 0px;
@@ -807,6 +848,9 @@ ul.cloud a:hover::before {
 .footer_title {
   margin-bottom: 10px;
 }
+.footer_six button:last-child {
+  margin-right: 0px;
+}
 @media (min-width: 576px) and (max-width: 768px) {
   .container {
     margin: 0 50px;
@@ -819,6 +863,10 @@ ul.cloud a:hover::before {
   }
   .login {
     display: none;
+  }
+  .close {
+    top: 22px;
+    right: 5px;
   }
   .logo {
     margin-left: 100px;
@@ -932,6 +980,9 @@ ul.cloud a:hover::before {
 .footer_title {
   margin-bottom: 10px;
 }
+.footer_six button {
+  margin-right: 30px;
+}
 @media (min-width: 769px) and (max-width: 1075px) {
   .container {
     margin: 0 150px;
@@ -999,104 +1050,20 @@ ul.cloud a:hover::before {
     display: flex;
     flex-direction: column;
   }
-
+  aside {
+    width: 100%;
+  }
   .pricing_cards div {
     margin-right: 10px;
   }
   .footer_logo {
     margin-left: 100px;
   }
-  footer {
-    display: grid;
-    grid-template-columns: repeat(2, 200px);
-    grid-template-rows: repeat(4, 200px);
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
-  }
-  .footer_first {
-    grid-area: 1 / 1 / 3 / 2;
-  }
-  .footer_second {
-    grid-area: 1 / 2 / 2 / 3;
-  }
-  .footer_third {
-    grid-area: 2 / 2 / 3 / 3;
-  }
-  .footer_four {
-    grid-area: 3 / 1 / 4 / 2;
-  }
-  .footer_five {
-    grid-area: 4 / 1 / 5 / 3;
-  }
-  .footer_six {
-    grid-area: 3 / 2 / 4 / 3;
-  }
 }
 .footer_title {
   margin-bottom: 10px;
 }
-@media (min-width: 1076px) and (max-width: 1200px) {
-  .container {
-    margin: 0 150px;
-  }
-  .search input {
-    width: 100%;
-  }
-  .login {
-    display: none;
-  }
-  .menu_main li {
-    margin-right: 10px;
-  }
-  .menu_main,
-  .logo {
-    font-size: 14px;
-    line-height: 20px;
-  }
-  .tag_cloud_name {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-  }
-  .post_content {
-    margin: 0;
-  }
-  .menu-icons::after {
-    margin-left: 5px;
-  }
-  .tags {
-    display: none;
-  }
-  .posts {
-    border-right: none;
-  }
-  .main,
-  .main_section {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-left: 150px;
-    margin-right: 150px;
-  }
-  aside {
-    margin-left: 0;
-  }
-  .private {
-    margin: 20px 100px;
-  }
-  .ann_title_img {
-    margin: 20px 100px;
-  }
-  .post {
-    display: flex;
-    flex-direction: column;
-  }
-  .search input {
-    width: 100%;
-  }
-}
-@media (min-width: 1201px) and (max-width: 1420px) {
+@media (min-width: 1076px) and (max-width: 1420px) {
   .container {
     margin: 0 100px;
   }
@@ -1114,11 +1081,9 @@ ul.cloud a:hover::before {
   .tags_right {
     margin-left: 7%;
   }
-  main {
-  }
 }
 @media (min-width: 1551px) and (max-width: 1980px) {
   .tags_right {
-    margin-left: 17%;
+    margin-left: 35%;
   }
 }
