--- a/styles.css
+++ b/styles.css
@@ -194,6 +194,7 @@ header {
 }
 .main_img {
   width: 100%;
+  height: 100%;
 }
 .tags {
   display: flex;
@@ -515,6 +516,7 @@ a {
 }
 .ann {
   margin-bottom: 30px;
+  border-bottom: 1px solid #ebeced;
 }
 .ann_title {
   font-weight: 300;
@@ -533,9 +535,9 @@ a {
 .private {
   margin: 30px 0 50px 0;
 }
-.aside_hr {
+/* .aside_hr {
   margin-right: 30px;
-}
+} */
 .footer_logo {
   font-family: 'Inter';
   font-style: normal;
@@ -791,12 +793,12 @@ ul.cloud a:hover::before {
   .warning_first::before {
     left: -5px;
   }
-  .btn .warning {
+  .warning {
     display: grid;
-    grid-template-columns: repeat(2, 200px);
-    grid-template-rows: repeat(2, 15px);
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 20px);
     grid-column-gap: 0px;
-    grid-row-gap: 0px;
+    grid-row-gap: 5px;
   }
   .warning_first {
     grid-area: 1 / 1 / 2 / 2;
@@ -885,9 +887,6 @@ ul.cloud a:hover::before {
   .pricing_card:last-child {
     height: 380px;
   }
-  .btn-post {
-    margin-top: 205px;
-  }
   .pricing {
     padding: 0 30px;
   }
@@ -916,7 +915,7 @@ ul.cloud a:hover::before {
     width: 100%;
     display: flex;
     justify-content: center;
-    margin-top: 132px;
+    margin-top: 80px;
   }
   .footer_logo {
     margin-left: 30px;
@@ -991,7 +990,6 @@ ul.cloud a:hover::before {
   }
   .search_posts {
     display: block;
-    margin-left: 3px;
     width: 100%;
   }
   .close {
@@ -1034,6 +1032,10 @@ ul.cloud a:hover::before {
     justify-content: center;
     align-items: center;
   }
+  .main {
+    margin-left: 125px;
+    margin-right: 60px;
+  }
   .pricing_cards {
     display: flex;
     flex-direction: column;
@@ -1068,23 +1070,8 @@ ul.cloud a:hover::before {
     height: 68px;
   }
   .warning {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 20px);
-    grid-column-gap: 0px;
-    grid-row-gap: 5px;
-  }
-  .warning_first {
-    grid-area: 1 / 1 / 2 / 2;
-  }
-  .warning_second {
-    grid-area: 2 / 1 / 3 / 2;
-  }
-  .warning_third {
-    grid-area: 2 / 2 / 3 / 3;
-  }
-  .warning_four {
-    grid-area: 1 / 2 / 2 / 3;
+    font-size: 10px;
+    line-height: 12px;
   }
   .ann_title {
     margin-top: 150px;
@@ -1165,6 +1152,11 @@ ul.cloud a:hover::before {
   .post_content {
     margin: 0;
   }
+  .ways_title {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
   .logo {
     margin-left: 50px;
   }
@@ -1201,12 +1193,6 @@ ul.cloud a:hover::before {
   .empty_con {
     display: none;
   }
-  .private {
-    margin: 20px 100px;
-  }
-  .ann_title_img {
-    margin: 20px 100px;
-  }
   .post {
     display: flex;
     flex-direction: column;
@@ -1238,7 +1224,17 @@ ul.cloud a:hover::before {
     grid-column-gap: 5px;
   }
 }
-
+@media (min-width: 1076px) and (max-width: 1280px) {
+  .main_content {
+    margin: 15px 30px 30px 15px;
+  }
+  .main_text {
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 30px;
+    margin-bottom: 0px;
+  }
+}
 @media (min-width: 1076px) and (max-width: 1420px) {
   .container {
     margin: 0 100px;
@@ -1264,11 +1260,12 @@ ul.cloud a:hover::before {
     font-size: 12px;
     line-height: 16px;
   }
+
   .menu-icon {
     margin-top: -40px;
   }
-  .main_img {
-    width: 50%;
+  .main_text {
+    margin-bottom: 40px;
   }
   .search_posts {
     display: none;
