--- a/styles.css
+++ b/styles.css
@@ -116,7 +116,7 @@ header {
   content: '\25be';
   width: 10px;
   height: 5px;
-  /* margin-left: 10px; */
+  margin-left: 10px;
   cursor: pointer;
 }
 .menu_main li {
@@ -170,6 +170,9 @@ header {
 }
 .main_content {
   margin: 60px 60px 40px 60px;
+}
+.post_img {
+  margin-bottom: 38px;
 }
 .zero {
   font-weight: 400;
@@ -262,7 +265,7 @@ aside {
   margin-top: 20px;
 }
 .search input {
-  padding: 26px;
+  padding: 16px;
   width: 340px;
   border: 1px solid #d7d8d9;
   border-radius: 4px;
@@ -276,7 +279,7 @@ aside {
   height: 18px;
   display: block;
   position: absolute;
-  top: 33px;
+  top: 21px;
   left: 20px;
 }
 .post_title {
@@ -451,7 +454,7 @@ aside li:before {
   justify-content: center;
 }
 .pricing_hr {
-  margin: 0 90px 27px 90px;
+  margin: 18px 90px 27px 90px;
 }
 .pricing_card_save {
   font-weight: 700;
@@ -1142,7 +1145,9 @@ ul.cloud a:hover::before {
     margin-left: 3px;
     width: 100%;
   }
-
+  .pricing_hr {
+    margin: 18px 50px 27px 50px;
+  }
   .hamburger {
     display: none;
   }
@@ -1285,6 +1290,9 @@ ul.cloud a:hover::before {
     font-size: 12px;
     line-height: 16px;
   }
+  .pricing_hr {
+    margin: 18px 50px 27px 50px;
+  }
   .tags .tags_right li a {
     font-weight: 400;
     font-size: 12px;
@@ -1338,6 +1346,9 @@ ul.cloud a:hover::before {
   .empty_con {
     width: 10em;
   }
+  .pricing_hr {
+    margin: 18px 90px 27px 90px;
+  }
   .main_content {
     margin: 50px;
   }
@@ -1349,5 +1360,8 @@ ul.cloud a:hover::before {
 @media (min-width: 1551px) and (max-width: 1980px) {
   .search_posts {
     display: none;
+  }
+  .pricing_hr {
+    margin: 18px 90px 27px 90px;
   }
 }
